@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class AddEntryAgendaUI {
}

class AddEntryAgendaController {
    +AddEntryAgendaController(agenda, toDoList, authenticationRepository)
    +addEntryAgenda(startingDate, index)
    -getTaskByIndex(index)
    -getGSMFromSession()
    +getTasksList()
}

class Agenda {
    +addEntryAgenda(startingDate, task, gsmFromSession)
    -addEntry(gsmFromSession, entry)
    -validateEntry(entry)
    -validateUser(gsmFromSession, entry)
}

class Entry {
    -Date startingDate
    +Entry(startingDate, task)
}

class ToDoList {
    +getTaskByIndex(index)
}

class Task {
    -String title
    -String description
    -EmergencyDegree degreeOfUrgency
    -int expectedDuration
    -TaskType type
    -GreenSpace greenSpace
    +Task(reference, description, degreeOfUrgency, expectedDuration, type, greenSpace)
    +changeStatus(status)
}

class Repositories{
    - Repositories()
    + getInstance() : Repositories
    + getAgenda()
    + getToDoList()
    + getAuthenticationRepository()
}

enum AgendaStatus {
    PLANNED
    POSTPONED
    CANCELED
    DONE
}

enum TaskStatus {
    PENDING
    PROCESSED
}

class AuthenticationRepository {
    +getCurrentUserSession()
}

class UserSession {
    +getUserId()
}

class GreenSpaceManager {
    -String email
    +GreenSpaceManager(email)
}

AddEntryAgendaUI ..> AddEntryAgendaController
AddEntryAgendaController ..> Repositories: repositories
AddEntryAgendaController ..> Agenda: agenda
AddEntryAgendaController ..> ToDoList: toDoList
AddEntryAgendaController ..> AuthenticationRepository: authenticationRepository
AuthenticationRepository ..> UserSession
Repositories --> Repositories: instance
Repositories --> "1" Agenda
Repositories --> "1" ToDoList
Repositories --> "1" AuthenticationRepository
Agenda --> "*" Entry
ToDoList --> "*" Task
Entry --> "1" Task
Entry --> "1" AgendaStatus
Task --> "1" TaskStatus
Entry --> "1" GreenSpaceManager
Task --> "1" GreenSpaceManager

@enduml